--- a/Galery/scheme-galery.html
+++ b/Galery/scheme-galery.html
@@ -14,7 +14,7 @@
    
     <ul class="img-list">
       <li>
-          <li><a href="imgFolder/scheme/Схема 1.jpg"><img src="imgFolder/scheme/sch1.png" alt=""></a>
+          <li><a href="imgFolder/scheme/Схема%201.jpg"><img src="imgFolder/scheme/sch1.png" alt=""></a>
           </li>
           <li><a href="imgFolder/scheme/Схема 2.jpg"><img src="imgFolder/scheme/sch2.png" alt=""></a>
           </li>
