--- a/index.html
+++ b/index.html
@@ -41,7 +41,14 @@
                     <li><a href="" class="log">Вход</a></li>
                     <li><a href="">Регистрация</a></li>
                 </ul>
+              
             </nav>
+            <div class="languages">
+                    <ul class="languages">
+                            <li><a href="index_en.html" >En</a></li>
+                            <li><a href="index.html" >Ru</a></li>
+                        </ul>
+            </div>
           </div>
         </header>
         <!--
