--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                     <li><a href="#bio">Биография</a></li>
                     <li><a href="">Научкая работа</a></li>
                     <li><a href="">Контакты</a></li>
-                    <li><a href="" class="log">Вход</a></li>
-                    <li><a href="">Регистрация</a></li>
+                    <li><a href="auth.html" class="log">Вход</a></li>
+                    <li><a href="reg.html">Регистрация</a></li>
                 </ul>
               
             </nav>
