--- a/index_en.html
+++ b/index_en.html
@@ -38,8 +38,8 @@
                     <li><a href="#bio">Biography</a></li>
                     <li><a href="">Scientific work</a></li>
                     <li><a href="">Contacts</a></li>
-                    <li><a href="" class="log">login</a></li>
-                    <li><a href="">registration</a></li>
+                    <li><a href="auth.html" class="log">login</a></li>
+                    <li><a href="reg.html">registration</a></li>
                 </ul>
             </nav>
             <div class="languages">
