--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
            </div>
             <nav>
                 <ul>
-                    <li><a href="">Главаня</a></li>
+                    <li><a href="">Главная</a></li>
                     <li><a href="#bio">Биография</a></li>
-                    <li><a href="">Научкая работа</a></li>
+                    <li><a href="">Научная работа</a></li>
                     <li><a href="">Контакты</a></li>
                     <li><a href="auth.html" class="log">Вход</a></li>
                     <li><a href="reg.html">Регистрация</a></li>
